--- a/src/ui/configuration/ApmHardwareConfig.ui
+++ b/src/ui/configuration/ApmHardwareConfig.ui
@@ -114,6 +114,11 @@ QToolButton:pressed {
            <property name="text">
             <string>Mandatory Setup ...</string>
            </property>
+           <property name="icon">
+            <iconset theme="://files/images/actions/list-add.svg">
+             <normaloff/>
+            </iconset>
+           </property>
            <property name="checkable">
             <bool>true</bool>
            </property>
@@ -122,17 +127,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="frameTypeButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -144,17 +149,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="compassButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -163,17 +168,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="accelCalibrateButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -188,17 +193,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="arduPlaneLevelButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -213,17 +218,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="radioCalibrateButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -238,17 +243,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="flightModesButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -257,17 +262,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="failSafeButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -313,6 +318,11 @@ QToolButton:pressed {
            <property name="text">
             <string>Optional Setup ...</string>
            </property>
+           <property name="icon">
+            <iconset theme="://files/images/actions/list-add.svg">
+             <normaloff/>
+            </iconset>
+           </property>
            <property name="checkable">
             <bool>true</bool>
            </property>
@@ -321,17 +331,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="radio3DRButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -340,17 +350,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="batteryMonitorButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -359,17 +369,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="sonarButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -378,17 +388,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="airspeedButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -397,17 +407,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="opticalFlowButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -416,17 +426,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="osdButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -435,17 +445,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="cameraGimbalButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
@@ -454,17 +464,17 @@ QToolButton:pressed {
            </property>
           </widget>
          </item>
-         <item>
+         <item alignment="Qt::AlignRight">
           <widget class="QPushButton" name="antennaTrackerButton">
            <property name="minimumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>175</width>
+             <width>150</width>
              <height>30</height>
             </size>
            </property>
